# EDA-California-Housing

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
california_house_price/: __init__.py  dataset.py  feature_cleaning.py  feature_transformation.py
california_house_price/modeling/: predict.py  train.py
california_housing/: __init__.py  aggregating_statistics.py  feature_exploration.py  feature_transformation.py  plots.py
california_housing/modeling/: predict.py  train.py
dataset/interim/: california_housing.csv
dataset/processed/: california_housing.csv  california_housing_min_max.csv  california_housing_robust.csv  california_housing_std.csv
docs/: data_definition.py  generate_docs.py  generate_info.py  mkdocs.yml
docs/docs/: data_definition.md  data_dictionary.md  data_info.md
